# AxumBlogEngine

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  correct_login_response.json  init.sql  login_response.json  new_login_response.json  posts_response.json  start-dev.sh  stop-dev.sh  test-api.sh  ~$统设计说明书.docx  系统测试文档.docx  系统设计说明书.docx  需求规格说明书.docx
backend/: .env  Cargo.toml
backend/src/: lib.rs
backend/src/database/: comment.rs  favorite.rs  mod.rs  post.rs  user.rs
backend/src/handler/: auth.rs  favorite.rs  idl.rs  post.rs  user.rs
backend/tests/: TESTING_GUIDE.md  comment_test.rs  user_test.rs
frontend/: vite.config.js
frontend/rust/: README.md  package-lock.json  package.json
frontend/rust/src/assets/: admin.css  admin.less
frontend/rust/src/router/: index.js
frontend/rust/src/view/: Admin.vue  Detail.vue  Edit.vue  Home.vue  favorites.vue  login.vue  register.vue
frontend/src/: main.js
frontend/src/api/: index.js
frontend/src/config/: env.js
frontend/src/view/: Detail.vue  Drafts.vue  Edit.vue  Home.vue  Main.vue  Post.vue  favorites.vue  login.vue  register.vue
src/: error.rs  lib.rs
src/database/: comment.rs  favorite.rs  mod.rs  post.rs  user.rs
src/handler/: article.rs  auth.rs  comment.rs  favorite.rs  idl.rs  mod.rs  post.rs  user.rs
test/: userTest.rs
tests/: README.md  favorite_test.rs  post_test.rs
