[package]
name = "axum_blog_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json"], default-features = false }
tracing = "0.1"
thiserror = "1.0"
dotenv = "0.15"
jsonwebtoken = "7"
lazy_static = "1"

bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
fake = { version = "2.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }


